GPL/P6/tests/t051.err
Semantic error on line 1: Incorrect type for parameter 'x' of object r1.
Semantic error on line 3: Incorrect type for parameter 'rotation' of object r2.
